--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
   deploy:
+    needs: [lint-check, test-check]
     runs-on: ubuntu-latest
     steps:
       - name: Clone Repository
